# VOO

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  _clang-format  gen_msvs2017_cmake.bat
BundleResources/Configs/: curved_speed.conf  default_GLTF_output.csv  default_GLTF_preview.csv  default_audio_uiinfo.conf  default_effect_uiinfo.conf  default_filter_uiinfo.conf  default_sticker_uiinfo.conf  default_transition_uiinfo.conf  default_video_uiinfo.conf  default_words_uiinfo.conf  tts_settings.conf
BundleResources/effects/Empty/: effect.lua.template  effect.ofeffect  template.proj.template  uiinfo.conf
BundleResources/effects/video/: template.proj  video.lua  video.ofeffect
BundleResources/vscode_extensions/: of-effect-1.1.0.vsix
cmake/: BuildConfig_source.h
cmake/mac/: Info.plist.in  skyeditor.icns
cmake/win/: VersionResource.rc
src/: log.cpp  log.h  main.cpp  qml.qrc  qtquickcontrols2.conf
src/Theme/: Button.qml
src/base/http/: BaseRsp.cpp  BaseRsp.h  QReplyTimeout.cpp  QReplyTimeout.h  SEHttpClient.cpp  SEHttpClient.h
src/base/utils/: AppConstDef.h  AppConstance.cpp  AppConstance.h  AppPath.cpp  AppPath.h  Channel.h  CrashHelper.cpp  CrashHelper.h  FfmpegProcessWraper.cpp  FfmpegProcessWraper.h  HandleMap.cpp  HandleMap.h  JsonUtils.cpp  JsonUtils.h  LuaUtil.cpp  LuaUtil.h  MemoryPool.cpp  MemoryPool.h  OrangeFilterUtils.cpp  OrangeFilterUtils.h  ScopeGuard.h  SharedPref.cpp  SharedPref.h  SkyVariantUtil.cpp  SkyVariantUtil.h  StdThreadPools.h  StdThreadWork.h  TaskWrapper.cpp  TaskWrapper.h  ThreadPools.cpp  ThreadWroker.h  UploadUtils.cpp  UploadUtils.h  ZipUtils.cpp  ZipUtils.h  fileutils.cpp  fileutils.h  qaesencryption.cpp  qaesencryption.h  qmlutil.cpp  (+10 more)
src/base/widget/: FramelessWindow.h  FramelessWindow_OSX.mm  FramelessWindow_Win.cpp  moc_FramelessWindow_OSX.cpp  moc_FramelessWindow_Win.cpp
src/extension/: Dispatch.cpp  Dispatch.h  VSRun.cpp  VSRun.h  VooCommand.cpp  VooCommand.h  VooExtension.cpp  VooExtension.h  VooSocketServer.cpp  VooSocketServer.h
src/extension/api/: Dispatch_Tasks.cpp  Dispatch_Tasks.h  Dispatch_Window.cpp  Dispatch_Window.h
src/glhook/: GLewHook.cpp  GLewHook.h  QOpenGLApi.cpp  QOpenGLApi.h
src/i18n/: editor_en.ts  editor_zh-CN.ts
src/i18n/translations/: editor_en.qm  editor_zh-CN.qm  editor_zh.qm
src/project/: BaseInputListCreator.cpp  BaseInputListCreator.h  FashionlineInputListCreator.cpp  FashionlineInputListCreator.h  SEProject.cpp  SEProject.h  SEProjectConfig.cpp  SEProjectConfig.h  SEProjectDom.cpp  SEProjectDom.h  SEProjectProj.cpp  SEProjectProj.h  SkyPack.cpp  SkyPack.h
src/timeline/command/: CopyClipThread.cpp  CopyClipThread.h  PropertyEditCommand.cpp  PropertyEditCommand.h  RewindVideoCommand.cpp  RewindVideoCommand.h  baseskyundocommand.cpp  baseskyundocommand.h
src/timeline/controller/: propertyeditcontroller.cpp  propertyeditcontroller.h  timelinecontroller.cpp  timelinecontroller.h
src/timeline/image/: ImageCoverLoader.cpp  ImageCoverLoader.h  ImageDownloadMgr.cpp  ImageDownloadMgr.h  SkyImageLoader.cpp  SkyImageLoader.h  SkyImageProvider.cpp  SkyImageProvider.h  SkyImageResponse.cpp  SkyImageResponse.h  imagerequest.cpp  imagerequest.h
src/timeline/models/: SkyEffectWrapper.cpp  SkyEffectWrapper.h  TimelineDef.h  TransitionClip.cpp  TransitionClip.h  asyncprocessmodel.cpp  asyncprocessmodel.h  audioclip.cpp  audioclip.h  baseclip.cpp  baseclip.h  effectclip.cpp  effectclip.h  effectgridpropertymodel.cpp  effectgridpropertymodel.h  imageclip.cpp  imageclip.h  inputDevice.cpp  inputDevice.h  skyresourcebean.cpp  skyresourcebean.h  timelinemodel.cpp  timelinemodel.h  timelinetrack.cpp  timelinetrack.h  videoclip.cpp  videoclip.h
src/timeline/qrcode/: QRCodeImageProvider.cpp  QRCodeImageProvider.h  QrCode.cpp  QrCode.hpp  QrCodeController.cpp  QrCodeController.h
src/timeline/venus/: AsyncTimelineFrameMgr.cpp  AsyncTimelineFrameMgr.h  VenusManager.cpp  VenusManager.h
src/timeline/widget/: AudioWavWidget.cpp  AudioWavWidget.h  CropPreviewPlayer.cpp  CropPreviewPlayer.h  SkyMediaPlayer.cpp  SkyMediaPlayer.h  UpdateResourcePreviewPlayer.cpp  UpdateResourcePreviewPlayer.h  audiowavdatamgr.cpp  audiowavdatamgr.h  basicimagedatasource.cpp  basicimagedatasource.h
src/ui/: EditorPage.qml  EditorWindow.qml  Feedback.qml  GuidePage.qml
src/ui/basicmenubar/: BasicMenu.qml  BasicMenuBar.qml  BasicMenuBarItem.qml  BasicMenuItem.qml  BasicMenuSeparator.qml
src/ui/dialog/: AboutDialog.qml  AlertDialog.qml  CheckUpdate.qml  CropDialog.qml  CropDialogMouse.qml  ExportDialog.qml  ExportFailedDialog.qml  ExportSuccessDialog.qml  ExportingDialog.qml  LoginDialog.qml  MessageListDialog.qml  MiniPlayerDialog.qml  ProgressDialog.qml  QRCode.qml  SettingDialog.qml  TweenSettingDialog.qml  UpdateFound.qml  (+4 more)
src/user/: Login.h  LoginController.cpp  LoginController.h  Login_OSX.mm  Login_Win.cpp
thirds/mmkv/: CMakeLists.txt  CodedInputData.cpp  CodedInputData.h  CodedInputDataCrypt.cpp  CodedInputDataCrypt.h  CodedInputDataCrypt_OSX.cpp  CodedInputData_OSX.cpp  CodedOutputData.cpp  CodedOutputData.h  InterProcessLock.cpp  InterProcessLock.h  InterProcessLock_Android.cpp  InterProcessLock_Win32.cpp  KeyValueHolder.cpp  KeyValueHolder.h  MMBuffer.cpp  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.cpp  MMKVLog.h  MMKVLog_Android.cpp  MMKVPredef.h  MMKV_Android.cpp  MMKV_IO.cpp  MMKV_IO.h  MMKV_OSX.cpp  MMKV_OSX.h  MemoryFile.cpp  MemoryFile.h  MemoryFile_Android.cpp  MemoryFile_OSX.cpp  MemoryFile_Win32.cpp  MiniPBCoder.cpp  MiniPBCoder.h  MiniPBCoder_OSX.cpp  PBUtility.cpp  PBUtility.h  ThreadLock.cpp  ThreadLock.h  (+2 more)
thirds/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  ioapi.h  minizip_crypt.h  qioapi.cpp  quaadler32.cpp  quaadler32.h  quachecksum32.cpp  quachecksum32.h  quacrc32.cpp  quacrc32.h  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazip.h  quazip_global.h  quazip_qt_compat.h  quazipdir.cpp  quazipdir.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.cpp  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  unzip.c  unzip.h  zip.c  zip.h  zlib_wrapper.h
(+584 files in other folders)
